--- a/intro/intro.html
+++ b/intro/intro.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+<button class="btn">Click me</button>
+<p id="demo"></p>
+<p id="font">Buton tiklanildiğinda fontSize büyüyecek</p>
+<p id="kaybol">Bu Butona tiklanildiğinda yazi kaybolacak</p>
+<p id="görün" style="display: none;">Bu butona tiklanildiğinda yazi görünecek</p>
+<button class="yazdir">Geçerli sayfayi yazdirmak için butona tiklayiniz</button>
+
+
 
     
     <script src="intro.js"></script>
