--- a/statements/statements.html
+++ b/statements/statements.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button class="btn">CLİCK ME</button>
+    <p id="demo"></p>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
 
     <script src="statements.js"></script>
 </body>
