--- a/Variables/variables.html
+++ b/Variables/variables.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="demo"></p>
+    <p id="demo1"></p>
     
 
     <script src="variables.js"></script>
